# Job-Recommender-System-with-MCP

./: README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
